--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "desafe-link",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Microsoft Safe Link Unfurler",
   "private": true,
   "engines": {
-    "node": ">= 16.x",
+    "node": ">= 18.x",
     "npm": ">= 8.x"
   },
   "type": "module",
@@ -43,9 +43,9 @@
     "react-icons": "4.10.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.22.9",
-    "@babel/eslint-plugin": "7.22.5",
-    "@babel/preset-env": "7.22.9",
+    "@babel/eslint-parser": "7.22.10",
+    "@babel/eslint-plugin": "7.22.10",
+    "@babel/preset-env": "7.22.10",
     "@babel/preset-react": "7.22.5",
     "@fullhuman/postcss-purgecss": "5.0.0",
     "@tailwindcss/typography": "0.5.9",
@@ -53,7 +53,7 @@
     "autoprefixer": "10.4.14",
     "babel-plugin-add-react-displayname": "0.0.5",
     "cssnano": "6.0.1",
-    "cz-git": "^1.6.1",
+    "cz-git": "1.7.0",
     "eslint": "8.46.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.0.0",
