--- a/package.json
+++ b/package.json
@@ -30,52 +30,53 @@
   },
   "homepage": "https://mikesprague.github.io/desafe-link",
   "dependencies": {
-    "daisyui": "3.5.1",
-    "dotenv": "16.3.1",
-    "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.45.4",
-    "react-icons": "4.10.1"
+    "daisyui": "^3.5.1",
+    "dotenv": "^16.3.1",
+    "emojisplosion": "^2.6.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.22.10",
-    "@babel/eslint-plugin": "7.22.10",
-    "@babel/preset-env": "7.22.10",
-    "@babel/preset-react": "7.22.5",
-    "@fullhuman/postcss-purgecss": "5.0.0",
-    "@tailwindcss/typography": "0.5.9",
-    "@vitejs/plugin-react-swc": "3.3.2",
-    "autoprefixer": "10.4.15",
-    "babel-plugin-add-react-displayname": "0.0.5",
-    "cssnano": "6.0.1",
-    "cz-git": "1.7.1",
-    "eslint": "8.47.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-stylelint": "20.0.0",
-    "eslint-plugin-compat": "4.1.4",
-    "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-markdown": "3.0.1",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "1.7.1",
-    "postcss": "8.4.28",
-    "postcss-cli": "10.1.0",
-    "prettier": "3.0.2",
-    "prettier-eslint": "15.0.1",
-    "sass": "1.66.1",
-    "stylelint": "15.10.3",
-    "stylelint-config-standard": "34.0.0",
-    "stylelint-config-standard-scss": "10.0.0",
-    "stylelint-prettier": "4.0.2",
-    "tailwindcss": "3.3.3",
-    "vite": "4.4.9",
-    "vite-plugin-html": "3.2.0",
-    "vite-plugin-pwa": "0.16.4"
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/eslint-plugin": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.15",
+    "babel-plugin-add-react-displayname": "^0.0.5",
+    "cssnano": "^6.0.1",
+    "cz-git": "^1.7.1",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-stylelint": "^20.0.0",
+    "eslint-plugin-compat": "^4.1.4",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-markdown": "^3.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "^1.7.1",
+    "postcss": "^8.4.28",
+    "postcss-cli": "^10.1.0",
+    "prettier": "^3.0.2",
+    "prettier-eslint": "^15.0.1",
+    "sass": "^1.66.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-prettier": "^4.0.2",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.9",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "babel": {
     "plugins": [
