--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "use-local-storage-state": "^19.0.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.10",
