--- a/package.json
+++ b/package.json
@@ -30,37 +30,37 @@
   },
   "homepage": "https://mikesprague.github.io/desafe-link",
   "dependencies": {
-    "daisyui": "^3.7.4",
-    "dotenv": "^16.3.1",
-    "emojisplosion": "^2.6.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
-    "react-icons": "^4.11.0",
-    "use-local-storage-state": "^19.0.4"
+    "daisyui": "3.7.4",
+    "dotenv": "16.3.1",
+    "emojisplosion": "2.6.1",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.46.1",
+    "react-icons": "4.11.0",
+    "use-local-storage-state": "19.0.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.15",
-    "@babel/preset-react": "^7.22.15",
-    "@biomejs/biome": "1.1.2",
-    "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "autoprefixer": "^10.4.15",
-    "babel-plugin-add-react-displayname": "^0.0.5",
-    "cssnano": "^6.0.1",
-    "cz-git": "^1.7.1",
-    "postcss": "^8.4.29",
-    "postcss-cli": "^10.1.0",
-    "sass": "^1.67.0",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-pwa": "^0.16.5"
+    "@babel/preset-env": "7.22.20",
+    "@babel/preset-react": "7.22.15",
+    "@biomejs/biome": "1.2.2",
+    "@fullhuman/postcss-purgecss": "5.0.0",
+    "@tailwindcss/typography": "0.5.10",
+    "@vitejs/plugin-react-swc": "3.3.2",
+    "autoprefixer": "10.4.15",
+    "babel-plugin-add-react-displayname": "0.0.5",
+    "cssnano": "6.0.1",
+    "cz-git": "1.7.1",
+    "postcss": "8.4.29",
+    "postcss-cli": "10.1.0",
+    "sass": "1.67.0",
+    "stylelint": "15.10.3",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-config-standard-scss": "11.0.0",
+    "tailwindcss": "3.3.3",
+    "vite": "4.4.9",
+    "vite-plugin-html": "3.2.0",
+    "vite-plugin-pwa": "0.16.5"
   },
   "babel": {
     "plugins": ["add-react-displayname"],
