--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,8 @@
       "**/.history/*",
       "**/.vscode/*",
       "**/node_modules/*",
-      "**/docs/*"
+      "**/public/*",
+      "**/build/*"
     ]
   },
   "organizeImports": {
