--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.51.4",
-    "react-icons": "5.2.1",
-    "use-local-storage-state": "19.2.0"
+    "react-icons": "5.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
