--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,9 +22,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  NODE_VERSION: '20'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,10 +29,10 @@ jobs:
       - name: 👷 Checkout Repo
         uses: actions/checkout@v4
 
-      - name: 🏗️ Setup Node.js ${{ env.NODE_VERSION }} environment
+      - name: 🏗️ Setup Node.js ${{ vars.NODE_VERSION }} environment
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
           check-latest: true
           cache: npm
           cache-dependency-path: '**/package-lock.json'
@@ -45,9 +42,9 @@ jobs:
         id: cache
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ vars.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
+            ${{ runner.os }}-node-${{ vars.NODE_VERSION }}-
 
       - name: 🏗️ Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
