--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "desafe-link",
-  "version": "1.0.0-beta.24",
+  "version": "1.0.0-beta.25",
   "description": "Microsoft Safe Link Unfurler",
   "private": true,
   "engines": {
-    "node": ">= 20.x",
+    "node": ">= 22.x",
     "npm": ">= 10.x"
   },
   "type": "module",
@@ -30,7 +30,7 @@
   },
   "homepage": "https://mikesprague.github.io/desafe-link",
   "dependencies": {
-    "daisyui": "4.12.23",
+    "daisyui": "5.0.0-beta.2",
     "dotenv": "16.4.7",
     "emoji-blast": "0.10.2",
     "jotai": "2.11.1",
@@ -42,19 +42,15 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@fullhuman/postcss-purgecss": "7.0.2",
     "@tailwindcss/typography": "0.5.16",
+    "@tailwindcss/vite": "4.0.0",
     "@vitejs/plugin-react-swc": "3.7.2",
-    "autoprefixer": "10.4.20",
-    "cssnano": "7.0.6",
     "cz-git": "1.11.0",
-    "postcss": "8.5.1",
-    "postcss-cli": "11.0.0",
-    "sass": "1.83.4",
+    "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "stylelint": "16.14.0",
     "stylelint-config-standard": "37.0.0",
-    "stylelint-config-standard-scss": "14.0.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "vite": "6.0.11",
     "vite-plugin-html": "3.2.2",
     "vite-plugin-pwa": "0.21.1"
@@ -77,7 +73,7 @@
     }
   },
   "volta": {
-    "node": "23.5.0",
-    "npm": "11.0.0"
+    "node": "22.13.1",
+    "npm": "10.9.2"
   }
 }
