--- a/biome.json
+++ b/biome.json
@@ -1,29 +1,36 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.3.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
   "files": {
-    "ignore": [
-      "**/.git/*",
-      "**/.github/*",
-      "**/.history/*",
-      "**/.vscode/*",
-      "**/node_modules/*",
-      "**/public/*",
-      "**/build/*"
+    "includes": [
+      "**",
+      "!**/.git/**/*",
+      "!**/.github/**/*",
+      "!**/.history/**/*",
+      "!**/.vscode/**/*",
+      "!**/node_modules/**/*",
+      "!**/public/**/*",
+      "!**/build/**/*"
     ]
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "style": {
-        "useBlockStatements": "error"
+        "useBlockStatements": "error",
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
-      "correctness": {
-        "all": true
-      }
+      "correctness": {}
     }
   },
   "formatter": {
